processor/src/test/resources/errors/PrivateActivity.java
package errors;

import android.app.Activity;

import com.kboyarshinov.activityscreens.annotation.ActivityScreen;

@ActivityScreen
private class PrivateActivity extends Activity {
}